right part done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <img src="./assets/img/logo.png" alt="logo resturant">
         <p>Effettua un ordine cliccando il pulsante in basso</p>
-        <button><a href="./src/html/ordini.html">Cliccca per Ordinare</a></button>
+        <button><a href="./src/html/ordini.php">Cliccca per Ordinare</a></button> 
     </div>
 </body>
 </html>
