--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="./assets/img/logo.png" alt="logo resturant">
+        <img src="./assets/logo.png" alt="logo resturant">
         <p>Effettua un ordine cliccando il pulsante in basso</p>
-        <button><a href="./src/backend/php/ordini.php">Cliccca per Ordinare</a></button> 
+        <button><a href="./src/backend/code/php/data.php">Cliccca per Ordinare</a></button> 
     </div>
 </body>
 </html>
